Port avbtool to python3

--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,7 @@ Priority: optional
 Maintainer: Eugenio Paolantonio (g7) <eugenio@droidian.org>
 Build-Depends: debhelper (>=13~),
                dh-python,
-               python-all-dev (>= 2.7),
-X-Python-Version: >= 2.7
+               python3-all-dev,
 Standards-Version: 4.2.1
 Homepage: https://android.googlesource.com/platform/external/avb
 Vcs-Git: https://github.com/droidian/android-platform-external-avb.git
@@ -16,7 +15,7 @@ Architecture: all
 Section: utils
 Depends: ${shlibs:Depends},
          ${python:Depends},
-         python2 (>= 2.7)
+         python3
 Description: Command-line tool for working with Android Verified Boot images
  avbtool is a command-line tool for working with Android Verified Boot images,
  also known as "vbmeta.img".
